[gd_scene load_steps=14 format=2]

[ext_resource path="res://levels/crash_ball/Main.gd" type="Script" id=1]
[ext_resource path="res://levels/crash_ball/arena.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/UI/GUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/scripts/GameTests.gd" type="Script" id=4]
[ext_resource path="res://levels/crash_ball/Gui.gd" type="Script" id=5]
[ext_resource path="res://assets/UI/Countdown.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/balls/metal_ball.tres" type="SphereMesh" id=10]
[ext_resource path="res://levels/crash_ball/PlayersMM.gd" type="Script" id=11]
[ext_resource path="res://carts/models/cart_model.tres" type="ArrayMesh" id=12]
[ext_resource path="res://carts/models/indicator.tres" type="CubeMesh" id=13]

[sub_resource type="MultiMesh" id=22]
color_format = 1
transform_format = 1
custom_data_format = 1
instance_count = 4
mesh = ExtResource( 12 )
transform_array = PoolVector3Array( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.226, 4.302, -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0.226, -4.302, -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -4.302, 0.226, 0, -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 4.302, 0.226, 0 )
color_array = PoolColorArray( 0.184314, 0.513726, 0, 1, 0.184314, 0.513726, 0, 1, 0.184314, 0.513726, 0, 1, 0.184314, 0.513726, 0, 1 )
custom_data_array = PoolColorArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 )

[sub_resource type="MultiMesh" id=23]
color_format = 1
transform_format = 1
custom_data_format = 1
instance_count = 4
mesh = ExtResource( 13 )
transform_array = PoolVector3Array( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.365, 3.796, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.365, -3.796, 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.796, 0.365, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.796, 0.365, 0 )
color_array = PoolColorArray( 1, 1, 0, 1, 1, 1, 0, 1, 1, 1, 0, 1, 1, 1, 0, 1 )
custom_data_array = PoolColorArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 )

[sub_resource type="MultiMesh" id=21]
color_format = 1
transform_format = 1
instance_count = 4
mesh = ExtResource( 10 )
transform_array = PoolVector3Array( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
color_array = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 )

[node name="Main" type="Spatial" groups=["Balls", "Players"]]
script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.490387, 0.871505, 0, -0.871505, 0.490387, 0, 5.60978, 4.42445 )
fov = 65.0

[node name="Players" type="Spatial" parent="."]

[node name="Balls" type="Spatial" parent="."]

[node name="GameTests" type="Node" parent="."]
script = ExtResource( 4 )
players = NodePath("../Players")

[node name="BallTimer" type="Timer" parent="."]
one_shot = true

[node name="AutoWin" type="Timer" parent="."]
one_shot = true

[node name="RestartGame" type="Timer" parent="."]
one_shot = true

[node name="ReturnToMainMenu" type="Timer" parent="."]
one_shot = true

[node name="arena" parent="." instance=ExtResource( 2 )]

[node name="DrawMeshes" type="Spatial" parent="."]

[node name="Players" type="Spatial" parent="DrawMeshes"]
script = ExtResource( 11 )

[node name="Carts" type="MultiMeshInstance" parent="DrawMeshes/Players"]
multimesh = SubResource( 22 )

[node name="Indicator" type="MultiMeshInstance" parent="DrawMeshes/Players"]
multimesh = SubResource( 23 )

[node name="Character" type="MultiMeshInstance" parent="DrawMeshes/Players"]

[node name="Balls" type="MultiMeshInstance" parent="DrawMeshes"]
multimesh = SubResource( 21 )

[node name="SpringArm" type="Spatial" parent="."]

[node name="Camera" type="Camera" parent="SpringArm"]
transform = Transform( 1, 0, 0, 0, 0.422618, 0.906308, 0, -0.906308, 0.422618, 0, 5.52393, 2.8324 )
current = true
fov = 90.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource( 5 )

[node name="GUI" parent="CanvasLayer" instance=ExtResource( 3 )]

[node name="Ball_counter" parent="CanvasLayer/GUI" index="0"]
visible = false

[node name="Countdown" parent="CanvasLayer" instance=ExtResource( 6 )]

[connection signal="timeout" from="BallTimer" to="." method="_on_BallTimer_timeout"]
[connection signal="timeout" from="AutoWin" to="." method="_on_AutoWin_timeout"]
[connection signal="timeout" from="RestartGame" to="." method="_on_RestartGame_timeout"]
[connection signal="timeout" from="ReturnToMainMenu" to="." method="_on_ReturnToMainMenu_timeout"]
[connection signal="pressed" from="CanvasLayer/GUI/RetryMenu/VBoxContainer/Retry" to="CanvasLayer" method="_on_Retry_pressed"]
[connection signal="pressed" from="CanvasLayer/GUI/RetryMenu/VBoxContainer/Quit" to="CanvasLayer" method="_on_Quit_pressed"]
[connection signal="pressed" from="CanvasLayer/GUI/ForceWin/Button" to="CanvasLayer" method="_on_Button_pressed"]
[connection signal="pressed" from="CanvasLayer/GUI/PauseMenu/VBoxContainer/Resume" to="CanvasLayer" method="_on_Resume_pressed"]
[connection signal="pressed" from="CanvasLayer/GUI/PauseMenu/VBoxContainer/PauseRetry" to="CanvasLayer" method="_on_PauseRetry_pressed"]
[connection signal="pressed" from="CanvasLayer/GUI/PauseMenu/VBoxContainer/PauseQuit" to="CanvasLayer" method="_on_PauseQuit_pressed"]
[connection signal="pressed" from="CanvasLayer/GUI/PauseMenu/VBoxContainer2/PauseBack" to="CanvasLayer" method="_on_PauseBack_pressed"]
[connection signal="pressed" from="CanvasLayer/GUI/PauseMenu/VBoxContainer2/Retry" to="CanvasLayer" method="_on_Retry_pressed"]
[connection signal="pressed" from="CanvasLayer/GUI/PauseMenu/VBoxContainer3/Nope" to="CanvasLayer" method="_on_Nope_pressed"]
[connection signal="pressed" from="CanvasLayer/GUI/PauseMenu/VBoxContainer3/Yep" to="CanvasLayer" method="_on_Yep_pressed"]

[editable path="CanvasLayer/GUI"]
